simplified query api
