# server/python-flask-server/swagger_server/models/__init__.py
@@ -8,8 +8,6 @@ from swagger_server.models.edge_attribute import EdgeAttribute
 from swagger_server.models.node import Node
 from swagger_server.models.node_attribute import NodeAttribute
 from swagger_server.models.query import Query
-from swagger_server.models.query_terms import QueryTerms
-from swagger_server.models.question import Question
 from swagger_server.models.response import Response
 from swagger_server.models.result import Result
 from swagger_server.models.result_graph import ResultGraph
