# server/python-flask-server/swagger_server/models/query_terms.py
@@ -1,64 +1,0 @@
-# coding: utf-8
-
-from __future__ import absolute_import
-from datetime import date, datetime  # noqa: F401
-
-from typing import List, Dict  # noqa: F401
-
-from swagger_server.models.base_model_ import Model
-from swagger_server import util
-
-
-class QueryTerms(Model):
-    """NOTE: This class is auto generated by the swagger code generator program.
-
-    Do not edit the class manually.
-    """
-
-    def __init__(self, disease: str=None):  # noqa: E501
-        """QueryTerms - a model defined in Swagger
-
-        :param disease: The disease of this QueryTerms.  # noqa: E501
-        :type disease: str
-        """
-        self.swagger_types = {
-            'disease': str
-        }
-
-        self.attribute_map = {
-            'disease': 'disease'
-        }
-
-        self._disease = disease
-
-    @classmethod
-    def from_dict(cls, dikt) -> 'QueryTerms':
-        """Returns the dict as a model
-
-        :param dikt: A dict.
-        :type: dict
-        :return: The Query_terms of this QueryTerms.  # noqa: E501
-        :rtype: QueryTerms
-        """
-        return util.deserialize_model(dikt, cls)
-
-    @property
-    def disease(self) -> str:
-        """Gets the disease of this QueryTerms.
-
-
-        :return: The disease of this QueryTerms.
-        :rtype: str
-        """
-        return self._disease
-
-    @disease.setter
-    def disease(self, disease: str):
-        """Sets the disease of this QueryTerms.
-
-
-        :param disease: The disease of this QueryTerms.
-        :type disease: str
-        """
-
-        self._disease = disease
